2004-08-27  MenTaLguY <mental@rydia.net>

	* src/traits/function.h: add typedefs for all argument positions,
	  specifying 'void' for all arguments after the last

	* src/livarot/evil-malloc.h, src/livarot/BitLigne.cpp,
	  src/livarot/PathCutting.cpp, src/livarot/PathSimplify.cpp,
	  src/livarot/Shape.cpp, src/livarot/ShapeSweepUtils.cpp:

	  work around livarot bugs so I can use ElectricFence

2004-08-26  MenTaLguY <mental@rydia.net>

	* src/document-private.h, src/document.h, src/document.cpp:

	  add notification signal when resources are added or removed

2004-08-25  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/xml/repr-css.cpp (sp_repr_css_print):
	  Fix for shared string change.

	* src/sp-text.cpp (sp_text_description):
	  Fix for when font Name() call fails.

	* src/sp-text.cpp: CodingStyle changes, including moving some
	  declarations to first use.
	  Remove unused __SP_TEXT_C__ define.

2004-08-25  Carl Hetherington  <inkscape@carlh.net>

	* src/sp-cursor.cpp, src/sp-cursor.h, src/sp-guide.cpp:
	coding style cleanups.

2004-08-24  MenTaLguY <mental@rydia.net>

	* src/gc-anchor.h: fix to always use the GC base address, since
	  that will not always be the same as 'this', when I::GC::Anchored
	  is used via multiple inheritance.

2004-08-24  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/libnrtype/TextWrapper.h, src/libnrtype/TextWrapper.cpp (AppendUTF8):
	  Use strlen instead of for-loop.
	  Change printf to g_return_if_fail (and document that the argument
	  must be valid UTF-8).
	  Mark the text pointer as not being written through (const).

2004-08-23  MenTaLguY <mental@rydia.net>

	* src/xml/repr.cpp, src/xml/sp-repr-action.h:

	  removed stupid default 'next' constructor arguments and force them
	  to be specified explicitly (and fix the omission of one, which
	  fixes bug #1014541)

2004-08-22  MenTaLguY <mental@rydia.net>

	* src/Makefile_insert, src/gc-alloc.h:

	  introduced a GC-aware STL allocator
